tests/snapshots/formats__woff2__fillyfoal-sans.woff2.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ fillyfoal-sans.woff2 — WOFF2 1.0, 11 tables, 1.0 KiB as sfnt, 861 bytes compressed  [0x0+0x3a8]
  ▾ Header  [0x0+0x30]
      Signature: "wOF2"  [0x0+0x4]
      Flavor: 0x10000 — TrueType outlines  [0x4+0x4]
      Length: 936  [0x8+0x4]
      Number of tables: 11  [0xc+0x2]
      Reserved: 0  [0xe+0x2]
      Total sfnt size: 1048  [0x10+0x4]
      Total compressed size: 861  [0x14+0x4]
      Major version: 1  [0x18+0x2]
      Minor version: 0  [0x1a+0x2]
      Metadata offset: 0x0  [0x1c+0x4]
      Metadata length: 0  [0x20+0x4]
      Metadata original length: 0  [0x24+0x4]
      Private data offset: 0x0  [0x28+0x4]
      Private data length: 0  [0x2c+0x4]
  ▾ Table directory — 11 tables  [0x30+0x1b]
      'OS/2': 0x6 — OS/2 and Windows metrics, 96 bytes  [0x30+0x2]
      'cmap': 0x0 — Character to glyph mapping, 100 bytes  [0x32+0x2]
      'fvar': 0x3f — Font variations, 68 bytes  [0x34+0x6]
      'head': 0x1 — Font header, 54 bytes  [0x3a+0x2]
      'hhea': 0x2 — Horizontal header, 36 bytes  [0x3c+0x2]
      'hmtx': 0x3 — Horizontal metrics, 20 bytes  [0x3e+0x2]
      'maxp': 0x4 — Maximum profile, 32 bytes  [0x40+0x2]
      'name': 0x5 — Naming table, 371 bytes  [0x42+0x3]
      'post': 0x7 — PostScript, 32 bytes  [0x45+0x2]
      'glyf': 0xca — Glyph data, 36 bytes  [0x47+0x2]
      'loca': 0xcb — Index to location, 12 bytes  [0x49+0x2]
  ▾ Compressed font data — 0x359 bytes decompressed  [0x4b+0x35d]
    ▾ 'OS/2' — OS/2 and Windows metrics, 96 bytes  [#1:0x0+0x60]
        Version: 4  [#1:0x0+0x2]
        Average char width: 500  [#1:0x2+0x2]
        Weight class: Normal (0x190)  [#1:0x4+0x2]
        Width class: Medium (0x5)  [#1:0x6+0x2]
        Embedding (fsType): 0x0 [] — Installable  [#1:0x8+0x2]
        Subscript x size: 650  [#1:0xa+0x2]
        Subscript y size: 700  [#1:0xc+0x2]
        Subscript x offset: 0  [#1:0xe+0x2]
        Subscript y offset: 140  [#1:0x10+0x2]
        Superscript x size: 650  [#1:0x12+0x2]
        Superscript y size: 700  [#1:0x14+0x2]
        Superscript x offset: 0  [#1:0x16+0x2]
        Superscript y offset: 480  [#1:0x18+0x2]
        Strikeout size: 50  [#1:0x1a+0x2]
        Strikeout position: 250  [#1:0x1c+0x2]
        Family class: 2053 — class 8, subclass 5  [#1:0x1e+0x2]
        PANOSE: 02 0b 05 03 02 02 02 02 02 04  |..........|  [#1:0x20+0xa]
        Unicode range 1: 0x1  [#1:0x2a+0x4]
        Unicode range 2: 0x0  [#1:0x2e+0x4]
        Unicode range 3: 0x0  [#1:0x32+0x4]
        Unicode range 4: 0x0  [#1:0x36+0x4]
        Vendor ID: "FFOA"  [#1:0x3a+0x4]
        Selection: 0x40 [REGULAR]  [#1:0x3e+0x2]
        First char index: 0x20  [#1:0x40+0x2]
        Last char index: 0xffff  [#1:0x42+0x2]
        Typo ascender: 800  [#1:0x44+0x2]
        Typo descender: -200  [#1:0x46+0x2]
        Typo line gap: 90  [#1:0x48+0x2]
        Win ascent: 900  [#1:0x4a+0x2]
        Win descent: 200  [#1:0x4c+0x2]
        Code page range 1: 0x1  [#1:0x4e+0x4]
        Code page range 2: 0x0  [#1:0x52+0x4]
        x height: 500  [#1:0x56+0x2]
        Cap height: 700  [#1:0x58+0x2]
        Default char: 0x0  [#1:0x5a+0x2]
        Break char: 0x20  [#1:0x5c+0x2]
        Max context: 2  [#1:0x5e+0x2]
    ▾ 'cmap' — Character to glyph mapping, 100 bytes  [#1:0x60+0x64]
      ▾ Header  [#1:0x60+0x4]
          Version: 0  [#1:0x60+0x2]
          Number of encoding records: 3  [#1:0x62+0x2]
      ▾ Unicode / Unicode 2.0 BMP — format 4, 2 segments  [#1:0x7c+0x20]
          Format: 4  [#1:0x7c+0x2]
          Length: 32  [#1:0x7e+0x2]
          Language: 0  [#1:0x80+0x2]
          Segment count × 2: 4  [#1:0x82+0x2]
          Search range: 4  [#1:0x84+0x2]
          Entry selector: 1  [#1:0x86+0x2]
          Range shift: 0  [#1:0x88+0x2]
        ▾ Segments — 2  [#1:0x8a+0x12]
            U+0041–U+0043 — glyph 1 + index  [#1:0x8a+0x2]
            U+FFFF–U+FFFF — glyph 0 + index  [#1:0x8c+0x2]
      ▾ Windows / Unicode BMP — format 4, 2 segments  [#1:0x7c+0x20]
          Format: 4  [#1:0x7c+0x2]
          Length: 32  [#1:0x7e+0x2]
          Language: 0  [#1:0x80+0x2]
          Segment count × 2: 4  [#1:0x82+0x2]
          Search range: 4  [#1:0x84+0x2]
          Entry selector: 1  [#1:0x86+0x2]
          Range shift: 0  [#1:0x88+0x2]
        ▾ Segments — 2  [#1:0x8a+0x12]
            U+0041–U+0043 — glyph 1 + index  [#1:0x8a+0x2]
            U+FFFF–U+FFFF — glyph 0 + index  [#1:0x8c+0x2]
      ▾ Windows / Unicode full repertoire — format 12, 2 groups  [#1:0x9c+0x28]
          Format: 12  [#1:0x9c+0x2]
          Reserved: 0  [#1:0x9e+0x2]
          Length: 40  [#1:0xa0+0x4]
          Language: 0  [#1:0xa4+0x4]
          Number of groups: 2  [#1:0xa8+0x4]
        ▾ Groups — 2  [#1:0xac+0x18]
            U+0041–U+0043 — → glyphs 1–3  [#1:0xac+0xc]
            U+1F600–U+1F600 — → glyphs 4–4  [#1:0xb8+0xc]
    ▾ 'fvar' — Font variations, 68 bytes  [#1:0xc4+0x44]
        Major version: 1  [#1:0xc4+0x2]
        Minor version: 0  [#1:0xc6+0x2]
        Axes array offset: 0x10  [#1:0xc8+0x2]
        Reserved: 2  [#1:0xca+0x2]
        Axis count: 2  [#1:0xcc+0x2]
        Axis size: 20  [#1:0xce+0x2]
        Instance count: 1  [#1:0xd0+0x2]
        Instance size: 12  [#1:0xd2+0x2]
      ▾ Axes — 2  [#1:0xd4+0x28]
        ▾ 'wght' (Weight) — 100 … 400 … 900  [#1:0xd4+0x14]
            Tag: "wght"  [#1:0xd4+0x4]
            Minimum: 100  [#1:0xd8+0x4]
            Default: 400  [#1:0xdc+0x4]
            Maximum: 900  [#1:0xe0+0x4]
            Flags: 0x0  [#1:0xe4+0x2]
            Axis name ID: 256  [#1:0xe6+0x2]
        ▾ 'wdth' (Width) — 75 … 100 … 125  [#1:0xe8+0x14]
            Tag: "wdth"  [#1:0xe8+0x4]
            Minimum: 75  [#1:0xec+0x4]
            Default: 100  [#1:0xf0+0x4]
            Maximum: 125  [#1:0xf4+0x4]
            Flags: 0x0  [#1:0xf8+0x2]
            Axis name ID: 257  [#1:0xfa+0x2]
      ▾ Instances — 1  [#1:0xfc+0xc]
          Instance 0 — name ID 258, coordinates (700, 100)  [#1:0xfc+0xc]
    ▾ 'head' — Font header, 54 bytes  [#1:0x108+0x36]
        Major version: 1  [#1:0x108+0x2]
        Minor version: 0  [#1:0x10a+0x2]
        Font revision: 1.5  [#1:0x10c+0x4]
        Checksum adjustment: 0x0  [#1:0x110+0x4]
        Magic number: 0x5f0f3cf5  [#1:0x114+0x4]
        Flags: 0xb [Baseline at y=0 | Left sidebearing at x=0 | Integer ppem]  [#1:0x118+0x2]
        Units per em: 1000  [#1:0x11a+0x2]
        Created: 2026-09-21 14:13:20 UTC  [#1:0x11c+0x8]
        Modified: 2026-09-22 14:13:20 UTC  [#1:0x124+0x8]
        xMin: 0  [#1:0x12c+0x2]
        yMin: -200  [#1:0x12e+0x2]
        xMax: 800  [#1:0x130+0x2]
        yMax: 900  [#1:0x132+0x2]
        Mac style: 0x0 []  [#1:0x134+0x2]
        Smallest readable size (ppem): 8  [#1:0x136+0x2]
        Font direction hint: 2  [#1:0x138+0x2]
        Index to location format: 0 — short offsets  [#1:0x13a+0x2]
        Glyph data format: 0  [#1:0x13c+0x2]
    ▾ 'hhea' — Horizontal header, 36 bytes  [#1:0x13e+0x24]
        Major version: 1  [#1:0x13e+0x2]
        Minor version: 0  [#1:0x140+0x2]
        Ascender: 800  [#1:0x142+0x2]
        Descender: -200  [#1:0x144+0x2]
        Line gap: 90  [#1:0x146+0x2]
        Advance width max: 600  [#1:0x148+0x2]
        Min left side bearing: 0  [#1:0x14a+0x2]
        Min right side bearing: 0  [#1:0x14c+0x2]
        x max extent: 600  [#1:0x14e+0x2]
        Caret slope rise: 1  [#1:0x150+0x2]
        Caret slope run: 0  [#1:0x152+0x2]
        Caret offset: 0  [#1:0x154+0x2]
        Reserved: 00 00 00 00 00 00 00 00  |........|  [#1:0x156+0x8]
        Metric data format: 0  [#1:0x15e+0x2]
        Number of h metrics: 5  [#1:0x160+0x2]
    ▾ 'hmtx' — Horizontal metrics, 20 bytes  [#1:0x162+0x14]
        Data — 20 bytes  [#1:0x162+0x14]
    ▾ 'maxp' — Maximum profile, 32 bytes  [#1:0x176+0x20]
        Version: 0x10000 — 1.0 (TrueType)  [#1:0x176+0x4]
        Number of glyphs: 5  [#1:0x17a+0x2]
        Max points: 8  [#1:0x17c+0x2]
        Max contours: 1  [#1:0x17e+0x2]
        Max composite points: 0  [#1:0x180+0x2]
        Max composite contours: 0  [#1:0x182+0x2]
        Max zones: 2  [#1:0x184+0x2]
        Max twilight points: 0  [#1:0x186+0x2]
        Max storage: 0  [#1:0x188+0x2]
        Max function defs: 0  [#1:0x18a+0x2]
        Max instruction defs: 0  [#1:0x18c+0x2]
        Max stack elements: 64  [#1:0x18e+0x2]
        Max size of instructions: 0  [#1:0x190+0x2]
        Max component elements: 0  [#1:0x192+0x2]
        Max component depth: 0  [#1:0x194+0x2]
    ▾ 'name' — Naming table, 371 bytes  [#1:0x196+0x173]
      ▾ Header  [#1:0x196+0x6]
          Format: 0  [#1:0x196+0x2]
          Count: 9  [#1:0x198+0x2]
          String offset: 0x72  [#1:0x19a+0x2]
      ▾ Name records — 9 records  [#1:0x19c+0x6c]
        ▾ Font family: "Fillyfoal Sans" — Macintosh, Roman, English  [#1:0x208+0xe]
            Platform ID: Macintosh (0x1)  [#1:0x19c+0x2]
            Encoding ID: 0  [#1:0x19e+0x2]
            Language ID: 0x0  [#1:0x1a0+0x2]
            Name ID: Font family (0x1)  [#1:0x1a2+0x2]
            Length: 14  [#1:0x1a4+0x2]
            String offset: 0x0  [#1:0x1a6+0x2]
        ▾ Font subfamily: "Regular" — Macintosh, Roman, English  [#1:0x216+0x7]
            Platform ID: Macintosh (0x1)  [#1:0x1a8+0x2]
            Encoding ID: 0  [#1:0x1aa+0x2]
            Language ID: 0x0  [#1:0x1ac+0x2]
            Name ID: Font subfamily (0x2)  [#1:0x1ae+0x2]
            Length: 7  [#1:0x1b0+0x2]
            String offset: 0xe  [#1:0x1b2+0x2]
        ▾ Copyright: "No rights reserved (test fixture)" — Windows, Unicode BMP, en-US  [#1:0x21d+0x42]
            Platform ID: Windows (0x3)  [#1:0x1b4+0x2]
            Encoding ID: 1  [#1:0x1b6+0x2]
            Language ID: 0x409  [#1:0x1b8+0x2]
            Name ID: Copyright (0x0)  [#1:0x1ba+0x2]
            Length: 66  [#1:0x1bc+0x2]
            String offset: 0x15  [#1:0x1be+0x2]
        ▾ Font family: "Fillyfoal Sans" — Windows, Unicode BMP, en-US  [#1:0x25f+0x1c]
            Platform ID: Windows (0x3)  [#1:0x1c0+0x2]
            Encoding ID: 1  [#1:0x1c2+0x2]
            Language ID: 0x409  [#1:0x1c4+0x2]
            Name ID: Font family (0x1)  [#1:0x1c6+0x2]
            Length: 28  [#1:0x1c8+0x2]
            String offset: 0x57  [#1:0x1ca+0x2]
        ▾ Font subfamily: "Regular" — Windows, Unicode BMP, en-US  [#1:0x27b+0xe]
            Platform ID: Windows (0x3)  [#1:0x1cc+0x2]
            Encoding ID: 1  [#1:0x1ce+0x2]
            Language ID: 0x409  [#1:0x1d0+0x2]
            Name ID: Font subfamily (0x2)  [#1:0x1d2+0x2]
            Length: 14  [#1:0x1d4+0x2]
            String offset: 0x73  [#1:0x1d6+0x2]
        ▾ Full name: "Fillyfoal Sans Regular" — Windows, Unicode BMP, en-US  [#1:0x289+0x2c]
            Platform ID: Windows (0x3)  [#1:0x1d8+0x2]
            Encoding ID: 1  [#1:0x1da+0x2]
            Language ID: 0x409  [#1:0x1dc+0x2]
            Name ID: Full name (0x4)  [#1:0x1de+0x2]
            Length: 44  [#1:0x1e0+0x2]
            String offset: 0x81  [#1:0x1e2+0x2]
        ▾ Version: "Version 1.500" — Windows, Unicode BMP, en-US  [#1:0x2b5+0x1a]
            Platform ID: Windows (0x3)  [#1:0x1e4+0x2]
            Encoding ID: 1  [#1:0x1e6+0x2]
            Language ID: 0x409  [#1:0x1e8+0x2]
            Name ID: Version (0x5)  [#1:0x1ea+0x2]
            Length: 26  [#1:0x1ec+0x2]
            String offset: 0xad  [#1:0x1ee+0x2]
        ▾ PostScript name: "FillyfoalSans-Regular" — Windows, Unicode BMP, en-US  [#1:0x2cf+0x2a]
            Platform ID: Windows (0x3)  [#1:0x1f0+0x2]
            Encoding ID: 1  [#1:0x1f2+0x2]
            Language ID: 0x409  [#1:0x1f4+0x2]
            Name ID: PostScript name (0x6)  [#1:0x1f6+0x2]
            Length: 42  [#1:0x1f8+0x2]
            String offset: 0xc7  [#1:0x1fa+0x2]
        ▾ Font subfamily: "Standard" — Windows, Unicode BMP, de-DE  [#1:0x2f9+0x10]
            Platform ID: Windows (0x3)  [#1:0x1fc+0x2]
            Encoding ID: 1  [#1:0x1fe+0x2]
            Language ID: 0x407  [#1:0x200+0x2]
            Name ID: Font subfamily (0x2)  [#1:0x202+0x2]
            Length: 16  [#1:0x204+0x2]
            String offset: 0xf1  [#1:0x206+0x2]
    ▾ 'post' — PostScript, 32 bytes  [#1:0x309+0x20]
        Version: 0x30000 — 3  [#1:0x309+0x4]
        Italic angle: 0  [#1:0x30d+0x4]
        Underline position: -100  [#1:0x311+0x2]
        Underline thickness: 50  [#1:0x313+0x2]
        Is fixed pitch: 0  [#1:0x315+0x4]
        Min memory (Type 42): 0  [#1:0x319+0x4]
        Max memory (Type 42): 0  [#1:0x31d+0x4]
        Min memory (Type 1): 0  [#1:0x321+0x4]
        Max memory (Type 1): 0  [#1:0x325+0x4]
    ▾ 'glyf' — Glyph data, 36 bytes  [#1:0x329+0x24]
        Data — 36 bytes  [#1:0x329+0x24]
    ▾ 'loca' — Index to location, 12 bytes  [#1:0x34d+0xc]
        Data — 12 bytes  [#1:0x34d+0xc]
